--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Xuminhuas.GitHub.io</h1>
-      <h2 class="project-tagline">Eddy&#39;s Blog</h2>
+      <h1 class="project-name">Eddy.GitHub</h1>
+      <h2 class="project-tagline">Eddy's Blog</h2>
     </section>
 
     <section class="main-content">
