--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Eddy Xu</title>
+    <title>Eddy's blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <!--[if lte IE 8]><link rel="stylesheet" href="css/responsive-nav.css"><![endif]-->
+    <!--[if gt IE 8]><!--><link rel="stylesheet" href="css/styles.css"><!--<![endif]-->
+    <script src="js/responsive-nav.js"></script>
   </head>
   <body>
+    <div role="navigation" id="foo" class="nav-collapse">
+      <ul>
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+    </div>
     <section class="page-header">
       <h1 class="project-name">Eddy.GitHub</h1>
       <h2 class="project-tagline">Eddy's Blog</h2>
@@ -17,9 +28,9 @@
 
     <section class="main-content">
       <h1>
-<a id="xmh850216githubio" class="anchor" href="#xmh850216githubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>xmh850216.github.io</h1>
+      <a id="xmh850216githubio" class="anchor" href="#xmh850216githubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>xmh850216.github.io</h1>
 
-<p>Eddy's Blog</p>
+      <p>Eddy's Blog</p>
 
       <footer class="site-footer">
 
@@ -28,6 +39,12 @@
 
     </section>
 
-  
+
+    <script>
+      var navigation = responsiveNav("foo", {customToggle: ".nav-toggle"});
+    </script>
+
+
+
   </body>
 </html>
